feat: Implement initial review and inventory services, including their controllers and service implementations.